# qpy-truthtable

./: .gitignore  Bora.g4  README.md  package-lock.json  package.json  pyproject.toml  qpy_config.yml  requirements.txt  rollup.config.js  tsconfig.json
css/: styles.css
python/qpy/truthtable/: form.py  question_type.py
python/qpy/truthtable/formula/: __init__.py
python/qpy/truthtable/formula/_parser/: __init__.py  __main__.py
python/qpy/truthtable/formula/parser/: __init__.py  __main__.py
templates/: formulation.xhtml.j2
tests/python/: test_parser.py
ts/: .prettierignore  eslint.config.js  formula_input_element.ts  intermediate_formulas.ts  main.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  utils.ts
ts/mathjax/: v2.ts  v3.ts
ts/parser/: parser.ts
ts/src/: formula_input_element.ts  intermediate_formulas.ts  main.ts  utils.ts
ts/src/mathjax/: base.ts  index.ts  v3.ts  v4.ts
